# poprox-utils

./: .editorconfig  .gitignore  .pre-commit-config.yaml  pyproject.toml  requirements-dev.txt  requirements.txt
poprox_utils/: exceptions.py
poprox_utils/aws/: __init__.py  email.py  s3.py  ses.py  sqs.py
src/aws/: __init__.py  auth.py  email.py
tests/: test_email.py
